Fix Sketchfab embed: square on mobile, 16:9 on desktop

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1891,8 +1891,8 @@ body {
   padding-bottom: 2rem;
 }
 
-.pb-\[120\%\] {
-  padding-bottom: 120%;
+.pb-\[100\%\] {
+  padding-bottom: 100%;
 }
 
 .pb-\[56\.25\%\] {
